# Pacmen-C-

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  vcpkg.json
assets/maps/: level1.txt
src/: level1.txt  main.cpp
src/core/: Game.cpp  Game.h
src/entities/: Ghost.cpp  Ghost.h  Player.h
src/game/: TileMap.cpp  TileMap.h
src/render/: Renderer.cpp  Renderer.h
src/systems/: GhostSystem.cpp  GhostSystem.h  Input.cpp  Input.h
